--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"> 
 	<title>Point Buy Calculator</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" defer></script>
+	<script src="lib/knockout-3.4.2.js" defer></script>
 	<script src="config.js" defer></script>
 	<script src="calculator.js" defer></script>
 </head>
