Add link back to github repo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<h1>Point Buy Calculator</h1>
+			<h1><a href="https://github.com/Flashynuff/point_buy_calculator">Point Buy Calculator</a></h1>
 			<button data-bind="click: resetAll()">Reset All</button>
 		</div>
 		<div class="row">
