--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 						<h4>
 							Select Preset:
 						</h4>
-							<select name="presets" id="presets">
-								<option value="0">Coming Soon!</option>
+							<select name="presets" id="presets" data-bind="options: configs,
+							optionsText: function(item) { return item.name; },
+							value: config
+							">
 							</select>
 					</div>
 					<div class="one-half column">
@@ -107,14 +109,6 @@
 							<button class="reset button-primary center" data-bind="click: resetPointCosts()">Reset Point Costs</button>
 						</div>
 					</div>
-					<!-- <table id="point-costs">
-						<tbody data-bind="foreach: pointCosts">
-							<tr>
-								<td data-bind="text: score"></td>
-								<td><input type="number" data-bind="value: cost"></td>
-							</tr>
-						</tbody>
-					</table> -->
 					<div id="point-costs" data-bind="foreach: pointCosts">
 						<div class="point-cost">
 							<div class="point-cost-div score" data-bind="text: score"></div>
@@ -130,4 +124,4 @@
 		</div>
 	</div>
 </body>
-<!-- </html> -->
+</html>
