Add support for more ability names, rename custom config

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <link rel="icon" type="image/png" href="images/favicon.png">
 
-	<script src="lib/knockout-3.4.2.debug.js" defer></script>
+	<script src="lib/knockout-3.4.2.js" defer></script>
 	<script src="config.js" defer></script>
 	<script src="calculator.js" defer></script>
 </head>
