--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
 					<div class="row">
 						<div class="one-third column">
-							<button class="add-point-cost center" data-bind="click: addPointScore">Add Point Cost</button>
+							<button disabled=""class="add-point-cost center" data-bind="click: addPointScore">Add Point Cost</button>
 						</div>
 						<div class="one-third column">
-							<button class="add-point-cost center">Remove Point Cost</button>
+							<button disabled="" class="add-point-cost center">Remove Point Cost</button>
 						</div>
 						<div class="one-third column">
 							<button class="reset button-primary center" data-bind="click: resetPointCosts()">Reset Point Costs</button>
